fixed element and timepoint deletion